# pymes

./: .dockerignore  .env.example  .firebaserc  .gitignore  CLAUDE.md  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  firebase.generated.json  firebase.json  go.mod  go.sum  go.work  package-lock.json  plan que quedo a medias .md  pymes.code-workspace  renovate.json
ai/: Dockerfile.dev  Dockerfile.prod  MEMORY_MIGRATION_PLAN.md  MIGRATION_INVENTORY.md  cloudbuild.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
ai/scripts/: export_openapi.py
ai/src/: chat_blocks.py  config.py  localization.py  main.py  runtime_bootstrap.py  runtime_contracts.py
ai/src/agents/: __init__.py  audit.py  catalog.py  commercial_external_tools.py  commercial_procurement_tools.py  commercial_quote.py  commercial_runtime.py  commercial_sales_tools.py  commercial_tools.py  contracts.py  copilot_service.py  insight_chat_service.py  orchestrator_router.py  policy.py  review_gate.py  (+3 more)
ai/tests/: conftest.py  test_auth_middleware.py  test_config.py  test_copilot_service.py  test_db_engine.py  test_governance_callback.py  test_insight_chat_service.py  test_insight_evidence_extraction.py  test_insights_router.py  test_insights_service.py  test_internal_chat_refactor.py  test_internal_conversation_scope.py  test_orchestrator_router.py  test_pymes_assistant_service.py  test_review_callback.py  test_routing_decision.py  test_routing_pipeline.py  test_routing_resolver.py  test_runtime_bootstrap.py  test_sse_chat_contract.py  test_tool_access.py  test_tools_settings.py
(+3294 files in other folders)
