[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymes-pymes-core-shared"
version = "0.0.0"
description = "Codigo transversal compartido del producto pymes"
requires-python = ">=3.12"
dependencies = [
    "ai-core",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
